--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -20,14 +20,14 @@
       }
     },
     "clock": {
-      "format": "<span color='#b4befe'> </span>{:%H:%M}",
-      "tooltip-format": "{:  %A, %d-%m-%Y}",
-      "format-alt": "{:󰸗 %e %B %Y}"
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
+        "format": "{:%a, %d %b, %I:%M %p}"
     },
     "backlight": {
       "device": "intel_backlight",
       "format": "<span color='#b4befe'>{icon}</span> {percent}%",
-      "format-icons": ["", "", "", "", "", "", "", "", ""]
+      "format-icons": ["", "", "", "", "", "", "", "", ""],
+      "tooltip": false
     },
     "pulseaudio": {
       "format": "<span color='#b4befe'>{icon}</span> {volume}%",
