--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -213,8 +213,8 @@ bar {
   swaybar_command waybar
 }
 
-# Mako notification
-exec_always mako
+# notification
+exec swaync
 
 # Clipboard
 exec --no-startup-id wl-paste -t text --watch clipman store
